2013-06-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/eww.el (eww-mode): Undo isn't necessary in eww buffers,
	probably.
	(eww-mode-map): Add a menu bar.

2013-06-26  Glenn Morris  <rgm@gnu.org>

	* htmlfontify.el (hfy-triplet): Handle unspecified-fg, bg.
	(hfy-size): Handle ttys.  (Bug#14668)

	* info-xref.el: Update for Texinfo 5 change in *note format.
	(info-xref-node-re, info-xref-note-re): New constants.
	(info-xref-check-buffer): Use info-xref-note-re.

2013-06-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el (set-variable): Use read-from-minibuffer (bug#14710).

	* emacs-lisp/package.el (package--add-to-archive-contents): Add missing
	nil terminate the loop (bug#14718).

2013-06-25  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/eww.el: Rework history traversal.  When going forward/back,
	put these actions into the history, too, so that they can be
	replayed.
	(eww-render): Move the history reset to the correct buffer.

2013-06-25  Juri Linkov  <juri@jurta.org>

	* files-x.el (modify-dir-local-variable): Change the header comment
	in the file with directory local variables.  (Bug#14692)

	* files-x.el (read-file-local-variable-value): Add `default'.
	(Bug#14710)

2013-06-25  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/eww.el (eww-make-unique-file-name): Create a unique file
	name before saving to entering `y' accidentally asynchronously.

2013-06-25  Ivan Kanis  <ivan@kanis.fr>

	* net/eww.el (eww-download): New command and keystroke.

2013-06-25  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/eww.el (eww-copy-page-url): Change name of command.

	* net/shr.el (shr-map): Change `shr-copy-url' from `u' to `w' to
	be more consistent with Info and dired.

	* net/eww.el (eww-mode-map): Ditto.

2013-06-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/package.el: Use lexical-binding.  Include obsolete
	packages from archives.
	(package-archive-contents): Change format; include obsolete packages.